# Pokedex

./: CMakeLists.txt  defs.h  info.c  info.h  linkedList.c  linkedList.h  main.c  node.c  node.h  pokemon.c  pokemon.h  type.c  type.h
linkedList/: linkedList.c  linkedList.h  node.c  node.h
pokemon/: info.c  info.h  pokemon.c  pokemon.h  type.c  type.h
test/: intFunctions.h  test  test.c  test.h
